--- a/src/pages/tasklist/tasklist.html
+++ b/src/pages/tasklist/tasklist.html
@@ -1,13 +1,11 @@
-<ion-grid>
-  <ion-item-divider>
+<ion-grid class="apply-border">
     <ion-row class="vertical-divider">
         <ion-col col-4 class="task-bottom-border" ion-item >{{task.taskName}}</ion-col>
         <ion-col col-8 class='apply'>
-          <button ion-item *ngFor="let application of task.applications">              
+          <button (click)="openApplication()" ion-item *ngFor="let application of task.applications">
               {{ application.applicationName }}
           </button>
-
         </ion-col>
     </ion-row>
-  </ion-item-divider>
 </ion-grid>
+
