--- a/src/pages/mobile/taskdetails/taskdetails.html
+++ b/src/pages/mobile/taskdetails/taskdetails.html
@@ -1,1 +1,7 @@
-<div ion-item> Application details will go here </div>
+<ion-header>
+	<page-header title="Task Details"></page-header>
+</ion-header>
+
+<ion-content>
+    <div ion-item>Application Details for Mobile View</div>
+</ion-content>
