--- a/src/pages/mobile/header/header.html
+++ b/src/pages/mobile/header/header.html
@@ -1,9 +1,3 @@
-<div class="main-div">
-    <div class="left-div">
-        <img class="logo-image" src="../assets/images/logo.png">
-    </div>
-    <div class="right-div">
-        <ion-icon class="header-icons logout-margin cursor-pointer" ios="ios-person" md="md-person"></ion-icon>
-        <ion-icon class="header-icons cursor-pointer" ios="ios-power" md="md-power"></ion-icon>
-    </div>
-</div>
+<ion-navbar>
+  <ion-title>{{ title }}</ion-title>
+</ion-navbar>
